[package]
name = "sega_film"
version = "0.1.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
description = "Library to parse Sega FILM multimedia container files"
homepage = "https://github.com/mistydemeo/sega_film"
repository = "https://github.com/mistydemeo/sega_film.git"
license = "LGPL-3.0"
categories = ["parsing", "parser-implementations", "multimedia"]
keywords = ["game", "parser", "sega", "cinepak"]

[dependencies]
